--- a/docs/api/client.mdx
+++ b/docs/api/client.mdx
@@ -90,6 +90,13 @@ This class is only available on client
 ### nil ConnectToMontage(string) {#nil-ConnectToMontage-string}
 
 ### string GetConnectionStatus() {#string-GetConnectionStatus}
+Unknown,
+Connecting,
+FailedToConnect,
+StatusMessage,
+ReadyToAcknowledge,
+Connected,
+Disconnected
 
 ### string GetConnectionStatusDetailed() {#string-GetConnectionStatusDetailed}
 
