--- a/docs/api/voxelDB.mdx
+++ b/docs/api/voxelDB.mdx
@@ -10,7 +10,7 @@ id: VoxelDB
 ### nil Clear() {#nil-Clear}
 
 ### nil Flush() {#nil-Flush}
-Flush() adds special operation in queue, which waits for all running ops to finish.
+Flush() adds a special operation in the queue, which waits for all running ops to finish.
 If we had flush after each op, it would eliminate all multithreaded processing.
 
 ### Vec3i FromWorld(Vec3) {#Vec3i-FromWorld-Vec3}
