--- a/docs/api/voxelDataResource.mdx
+++ b/docs/api/voxelDataResource.mdx
@@ -20,6 +20,7 @@ save voxel data in AM file
 second parameter controls if file will be overwritten
 
 ### float, float GetBounds() {#float-float-GetBounds}
+get center (in local space) and dimensions of the voxel data
 
 ### userdata Duplicate() {#userdata-Duplicate}
 
