--- a/docs/api/voxelRenderer.mdx
+++ b/docs/api/voxelRenderer.mdx
@@ -26,10 +26,16 @@ id: VoxelRenderer
 ### bool enabled {#bool-enabled}
 
 ### bool prioritizeLod {#bool-prioritizeLod}
+Try to load higher LODs faster than those of other objects
 
 ### bool outline {#bool-outline}
+Draw an outline around this object
 
 ### Vec4 tintColor {#Vec4-tintColor}
+Render with a tint color
 
 ### bool receiveTransform {#bool-receiveTransform}
+Receive transform(pos, rot scale) from server. By default this is true. 
+If you set this to false, you will need to manually set the transform of the object on the client side.
+This is useful for making objects respond immediately if something happened on the client side i.e. input
 
