--- a/docs/api/examples/Input.mdx
+++ b/docs/api/examples/Input.mdx
@@ -1,8 +1,10 @@
 # Input
 
-A short example of how to use the input event system to move an object around with arrow keys. In this example any user connected can move the objecct. 
+A short example of how to use the event driven input system to move an object around with arrow keys. In this example any user connected can move the objecct. 
+
 The object transform for rendering is streamed from server to clients. Because of this the movement delayed on the client side.
-A more advanced script would assign a single owner to the script who can move the object and not receieve the rendered position from the server. Via `VoxelRenderer.receiveTransform = false`
+A more advanced script would assign a single owner to the script
+who can move the object and not receieve the rendered position from the server via [`VoxelRenderer.receiveTransform = false`](api/VoxelRenderer#bool-receiveTransform)
 
 ```lua
 local self = {}
@@ -21,7 +23,6 @@ function self:Start()
     if self.vd.path == "" then
         self.vd.path = "Emoji_Blank_Face.am"
     end
-    assert(self.onClient or self.vd.data, "Please assign a file to the Voxel Data component of this object in the server hierachy")
 
     --listen for input events by all players
     events.keyDown.addListener(self, function (key, from)
