--- a/docs/api/examples/Voxel-Edits.mdx
+++ b/docs/api/examples/Voxel-Edits.mdx
@@ -1,9 +1,9 @@
-#Voxel Edits
+# Voxel Edits
 
 This example script draws a line of voxels as the object its attached to moves around. To try it select the object in the hierachy and move it with the transformation gizmos.
 Since its not needed on client this script only runs on the server side.
 
-Currently the script creates voxels in the the global static voxel database. Script can also edit individual dynamic voxel data objects.
+Currently the script creates voxels in the the global static voxel database. Scripts can also edit individual dynamic voxel data objects.
 
 ```lua
 local self = {}
