--- a/docs/api/vec4.mdx
+++ b/docs/api/vec4.mdx
@@ -147,6 +147,8 @@ id: Vec4
 
 ### Vec4 __mul(Vec4, Vec4i) {#Vec4-mul-Vec4-Vec4i}
 
+### Vec4 __mul(Vec4, Mat4) {#Vec4-mul-Vec4-Mat4}
+
 ### Vec4 __mul(Vec4, float) {#Vec4-mul-Vec4-float}
 
 ### Vec4 __mul(float, Vec4) {#Vec4-mul-float-Vec4}
