--- a/docs/api/vec4i.mdx
+++ b/docs/api/vec4i.mdx
@@ -147,6 +147,8 @@ id: Vec4i
 
 ### Vec4 __mul(Vec4i, Vec4) {#Vec4-mul-Vec4i-Vec4}
 
+### Vec4i __mul(Vec4i, classTMatrix4<int>) {#Vec4i-mul-Vec4i-classTMatrix4int}
+
 ### Vec4i __mul(Vec4i, int) {#Vec4i-mul-Vec4i-int}
 
 ### Vec4i __mul(int, Vec4i) {#Vec4i-mul-int-Vec4i}
