--- a/docs/api/voxelEdit.mdx
+++ b/docs/api/voxelEdit.mdx
@@ -29,6 +29,10 @@ If we had flush after each op, it would eliminate all multithreaded processing.
 
 ### nil Kernel() {#nil-Kernel}
 
+### Image CaptureImage(Mat4, float) {#Image-CaptureImage-Mat4-float}
+
+### Image GetImageResource(string) {#Image-GetImageResource-string}
+
 ### nil FreeTmpLayers(int) {#nil-FreeTmpLayers-int}
 It projects cone on voxel geometry and everything inside will be copies to tmp
 all raycasts will collide with this tmp layer instead until FreeTmpLayers
@@ -82,6 +86,14 @@ if shape is nil the operation will match all targets
 ### bool copyColor {#bool-copyColor}
 
 ### int kernelType {#int-kernelType}
+
+### userdata imageColor {#userdata-imageColor}
+
+### userdata imageNormal {#userdata-imageNormal}
+
+### Mat4 imageUVTm {#Mat4-imageUVTm}
+
+### bool imageUVClamp {#bool-imageUVClamp}
 
 ### userdata onProgress {#userdata-onProgress}
 callback function. progress from 0-1. May not be called every frame. Is called after script updates 
